--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtQ37lVirFCQgGIpm72SFY",
+      "authorship_tag": "ABX9TyPNakDc64+8r0G4MY0UkOIJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,10 +213,11 @@
         "os.environ[\"OPENAI_API_KEY\"] = CREDS['OpenAI']['v2']['credential']\n",
         "llm = ChatOpenAI(temperature=0, model='gpt-4-0613')\n",
         "\n",
-        "def calculate_insurance_premium(insured_sum: int, industry: str) -> float:\n",
+        "def calculate_insurance_premium(insured_sum: int, industry: str, country: str = \"Germany\") -> float:\n",
         "    \"\"\"Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\"\"\"\n",
         "    premium = insured_sum*0.25\n",
-        "    return premium\n",
+        "    result = str(premium) + \" (for \" + country + \")\"\n",
+        "    return result\n",
         "\n",
         "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
         "\n",
@@ -242,8 +243,58 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 5,
+      "execution_count": 31,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# show calc_tool as OpenAI function\n",
+        "print(json.dumps(format_tool_to_openai_function(calc_tool), sort_keys=False, indent=2))"
+      ],
+      "metadata": {
+        "id": "9Gn4scosGVNK",
+        "outputId": "3c7aab24-558b-460d-9cc6-92e19b19fcdf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "  \"name\": \"calculate_insurance_premium\",\n",
+            "  \"description\": \"calculate_insurance_premium(insured_sum: int, industry: str, country: str = 'Germany') -> float - Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\",\n",
+            "  \"parameters\": {\n",
+            "    \"title\": \"calculate_insurance_premiumSchemaSchema\",\n",
+            "    \"type\": \"object\",\n",
+            "    \"properties\": {\n",
+            "      \"insured_sum\": {\n",
+            "        \"title\": \"Insured Sum\",\n",
+            "        \"type\": \"integer\"\n",
+            "      },\n",
+            "      \"industry\": {\n",
+            "        \"title\": \"Industry\",\n",
+            "        \"type\": \"string\"\n",
+            "      },\n",
+            "      \"country\": {\n",
+            "        \"title\": \"Country\",\n",
+            "        \"default\": \"Germany\",\n",
+            "        \"type\": \"string\"\n",
+            "      }\n",
+            "    },\n",
+            "    \"required\": [\n",
+            "      \"insured_sum\",\n",
+            "      \"industry\"\n",
+            "    ]\n",
+            "  }\n",
+            "}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -403,15 +454,14 @@
       "metadata": {
         "id": "qVfrjxhuUbn9"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#prompt = \"Give me the premium for an insured sum of 10000000\"\n",
-        "prompt = \"The industry is chemical production\"\n",
-        "#prompt = \"And the temperature in Celsius?\"\n",
+        "prompt = \"Give me the premium for an insured sum of 10000000\"\n",
+        "#prompt = \"The industry is chemical production\"\n",
         "messages.append({\"role\": \"user\", \"content\": prompt})\n",
         "print(\"user: \" + prompt)\n",
         "response = agent_executor.invoke({\"input\": prompt})\n",
