--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNakDc64+8r0G4MY0UkOIJ",
+      "authorship_tag": "ABX9TyN2ozi+9K50S5HE2NT4+5hm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -220,11 +220,11 @@
         "    return result\n",
         "\n",
         "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
-        "\n",
         "tools = [calc_tool]\n",
+        "tools_as_openai_functions = [format_tool_to_openai_function(t) for t in tools]\n",
         "\n",
         "llm_with_tools = llm.bind(\n",
-        "    functions=[format_tool_to_openai_function(t) for t in tools]\n",
+        "    functions=tools_as_openai_functions\n",
         ")\n",
         "\n",
         "prompt = ChatPromptTemplate.from_messages([\n",
@@ -243,7 +243,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -253,48 +253,10 @@
         "print(json.dumps(format_tool_to_openai_function(calc_tool), sort_keys=False, indent=2))"
       ],
       "metadata": {
-        "id": "9Gn4scosGVNK",
-        "outputId": "3c7aab24-558b-460d-9cc6-92e19b19fcdf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "9Gn4scosGVNK"
       },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{\n",
-            "  \"name\": \"calculate_insurance_premium\",\n",
-            "  \"description\": \"calculate_insurance_premium(insured_sum: int, industry: str, country: str = 'Germany') -> float - Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\",\n",
-            "  \"parameters\": {\n",
-            "    \"title\": \"calculate_insurance_premiumSchemaSchema\",\n",
-            "    \"type\": \"object\",\n",
-            "    \"properties\": {\n",
-            "      \"insured_sum\": {\n",
-            "        \"title\": \"Insured Sum\",\n",
-            "        \"type\": \"integer\"\n",
-            "      },\n",
-            "      \"industry\": {\n",
-            "        \"title\": \"Industry\",\n",
-            "        \"type\": \"string\"\n",
-            "      },\n",
-            "      \"country\": {\n",
-            "        \"title\": \"Country\",\n",
-            "        \"default\": \"Germany\",\n",
-            "        \"type\": \"string\"\n",
-            "      }\n",
-            "    },\n",
-            "    \"required\": [\n",
-            "      \"insured_sum\",\n",
-            "      \"industry\"\n",
-            "    ]\n",
-            "  }\n",
-            "}\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -454,7 +416,7 @@
       "metadata": {
         "id": "qVfrjxhuUbn9"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -670,22 +632,10 @@
         "print(chat_response)"
       ],
       "metadata": {
-        "id": "kBP6IHULEJ2P",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7028accb-63ad-417c-c9f8-6af2ecbf1163"
+        "id": "kBP6IHULEJ2P"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Um die Versicherungsprämie zu berechnen, benötige ich noch Informationen über die Branche des Kunden. Könnten Sie mir diese bitte mitteilen?\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -694,23 +644,10 @@
         "print(chat_response)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PGv6fJuACjO-",
-        "outputId": "ba9be79a-cdf2-4e9b-d0a4-2a29923cf318"
+        "id": "PGv6fJuACjO-"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "calculate_insurance_premium {'insured_sum': 10000000, 'industry': 'Gastronomie'}\n",
-            "Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Gastronomiebranche beträgt 2.500.000,00 Euro.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
