--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2ozi+9K50S5HE2NT4+5hm",
+      "authorship_tag": "ABX9TyOUAeCnQYMOPWElGd+VdURV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,9 +253,86 @@
         "print(json.dumps(format_tool_to_openai_function(calc_tool), sort_keys=False, indent=2))"
       ],
       "metadata": {
-        "id": "9Gn4scosGVNK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Gn4scosGVNK",
+        "outputId": "bcea8102-849b-4501-a98b-483d126c14e1"
       },
-      "execution_count": null,
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "  \"name\": \"calculate_insurance_premium\",\n",
+            "  \"description\": \"calculate_insurance_premium(insured_sum: int, industry: str, country: str = 'Germany') -> float - Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\",\n",
+            "  \"parameters\": {\n",
+            "    \"title\": \"calculate_insurance_premiumSchemaSchema\",\n",
+            "    \"type\": \"object\",\n",
+            "    \"properties\": {\n",
+            "      \"insured_sum\": {\n",
+            "        \"title\": \"Insured Sum\",\n",
+            "        \"type\": \"integer\"\n",
+            "      },\n",
+            "      \"industry\": {\n",
+            "        \"title\": \"Industry\",\n",
+            "        \"type\": \"string\"\n",
+            "      },\n",
+            "      \"country\": {\n",
+            "        \"title\": \"Country\",\n",
+            "        \"default\": \"Germany\",\n",
+            "        \"type\": \"string\"\n",
+            "      }\n",
+            "    },\n",
+            "    \"required\": [\n",
+            "      \"insured_sum\",\n",
+            "      \"industry\"\n",
+            "    ]\n",
+            "  }\n",
+            "}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "demoSchema = {\n",
+        "  \"name\": \"calculate_insurance_premium\",\n",
+        "  \"description\": \"calculate_insurance_premium(insured_sum: int, industry: str, country: str = 'Germany') -> float - Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\",\n",
+        "  \"parameters\": {\n",
+        "    \"title\": \"calculate_insurance_premiumSchemaSchema\",\n",
+        "    \"type\": \"object\",\n",
+        "    \"properties\": {\n",
+        "      \"insured_sum\": {\n",
+        "        \"title\": \"Insured Sum\",\n",
+        "        \"type\": \"integer\"\n",
+        "      },\n",
+        "      \"industry\": {\n",
+        "        \"title\": \"Industry\",\n",
+        "        \"type\": \"string\"\n",
+        "      },\n",
+        "      \"country\": {\n",
+        "        \"title\": \"Country\",\n",
+        "        \"default\": \"Germany\",\n",
+        "        \"type\": \"string\",\n",
+        "        \"enum\": [\"positive\", \"negative\"],\n",
+        "        \"description\": \"The Country where the insured company is located\"\n",
+        "      }\n",
+        "    },\n",
+        "    \"required\": [\n",
+        "      \"insured_sum\",\n",
+        "      \"industry\"\n",
+        "    ]\n",
+        "  }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "AFRanByCQJAW"
+      },
+      "execution_count": 50,
       "outputs": []
     },
     {
