--- a/Langchain-Agent-Insurance.ipynb
+++ b/Langchain-Agent-Insurance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDLkqNURy+PF8piPfWr/mk",
+      "authorship_tag": "ABX9TyN31bR+u9MzGm9dWWkjKHVS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,22 +139,21 @@
         "    result = str(premium) + \" (for \" + country + \")\"\n",
         "    return result\n",
         "\n",
+        "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
+        "\n",
         "def show_history() -> str:\n",
         "    \"\"\"Show the history of the chat or conversation to the user.\"\"\"\n",
         "    chat_history_string = str(response[\"chat_history\"]).replace(\"), \", \")§§§ \")[1:-1]\n",
         "    chat_history = chat_history_string.split(\"§§§ \")\n",
-        "    msg_history = []\n",
+        "    msg_history_string = \"\"\n",
         "    for chat_string in chat_history:\n",
         "      tmp = chat_string.split(\"(content='\")\n",
-        "      msg_history.append({\"role\": tmp[0], \"content\": tmp[1][:-2]})\n",
-        "    #for msg in msg_history:\n",
-        "    #  print(msg)\n",
-        "    msg_history_string = '\\n'.join(str(x) for x in msg_history)\n",
+        "      msg_history_string = msg_history_string + tmp[0] + \" - \" + tmp[1][:-2] + \"\\n\"\n",
         "    return msg_history_string\n",
         "\n",
+        "show_history_tool = StructuredTool.from_function(show_history, return_direct=True)\n",
         "\n",
-        "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
-        "tools = [calc_tool]\n",
+        "tools = [calc_tool, show_history_tool]\n",
         "tools_as_openai_functions = [format_tool_to_openai_function(t) for t in tools]\n",
         "\n",
         "llm_with_tools = llm.bind(\n",
@@ -177,7 +176,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 13,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -294,14 +293,15 @@
       "metadata": {
         "id": "qVfrjxhuUbn9"
       },
-      "execution_count": 14,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "prompt = \"Give me the premium for an insured sum of 10000000\"\n",
+        "#prompt = \"Give me the premium for an insured sum of 10000000\"\n",
         "#prompt = \"The industry is chemical production\"\n",
+        "prompt = \"Show me my last messages\"\n",
         "messages.append({\"role\": \"user\", \"content\": prompt})\n",
         "print(\"user: \" + prompt)\n",
         "response = agent_executor.invoke({\"input\": prompt})\n",
@@ -315,34 +315,77 @@
       ],
       "metadata": {
         "id": "OjDvg8GSaSP8",
-        "outputId": "3ea9939d-bfbf-4783-90c6-338fb463bd14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "622374d9-1120-4897-e04c-1f80742b32c8"
       },
-      "execution_count": 15,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "user: Give me the premium for an insured sum of 10000000\n",
+            "user: Show me my last messages\n",
             "\n",
             "\n",
             "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-            "\u001b[32;1m\u001b[1;3mSure, I can help with that. However, I also need to know the industry of the customer to calculate the insurance premium. Could you please provide that information?\u001b[0m\n",
+            "\u001b[32;1m\u001b[1;3m\n",
+            "Invoking: `show_history` with `{}`\n",
+            "\n",
+            "\n",
+            "\u001b[0m\u001b[33;1m\u001b[1;3mHumanMessage - Give me the premium for an insured sum of 10000000\n",
+            "AIMessage - Sure, I can help with that. However, I also need to know the industry of the customer to calculate the insurance premium. Could you please provide that information?\n",
+            "HumanMessage - The industry is chemical production\n",
+            "AIMessage - The premium for an insured sum of 10,000,000 in the chemical production industry in Germany is 2,500,000.\n",
+            "HumanMessage - Show me my last messages\n",
+            "AIMessage - HumanMessage - Give me the premium for an insured sum of 10000000\\nAIMessage - Sure, I can help with that. However, I also need to know the industry of the customer to calculate the insurance premium. Could you please provide that information?\\nHumanMessage - The industry is chemical production\\nAIMessage - The premium for an insured sum of 10,000,000 in the chemical production industry in Germany is 2,500,000.\\n\n",
+            "\u001b[0m\n",
+            "\u001b[32;1m\u001b[1;3m\u001b[0m\n",
             "\n",
             "\u001b[1m> Finished chain.\u001b[0m\n",
-            "assistant: Sure, I can help with that. However, I also need to know the industry\n",
-            "of the customer to calculate the insurance premium. Could you please provide\n",
-            "that information?\n",
+            "assistant: HumanMessage - Give me the premium for an insured sum of 10000000\n",
+            "AIMessage - Sure, I can help with that. However, I also need to know the\n",
+            "industry of the customer to calculate the insurance premium. Could you please\n",
+            "provide that information? HumanMessage - The industry is chemical production\n",
+            "AIMessage - The premium for an insured sum of 10,000,000 in the chemical\n",
+            "production industry in Germany is 2,500,000. HumanMessage - Show me my last\n",
+            "messages AIMessage - HumanMessage - Give me the premium for an insured sum of\n",
+            "10000000\\nAIMessage - Sure, I can help with that. However, I also need to know\n",
+            "the industry of the customer to calculate the insurance premium. Could you\n",
+            "please provide that information?\\nHumanMessage - The industry is chemical\n",
+            "production\\nAIMessage - The premium for an insured sum of 10,000,000 in the\n",
+            "chemical production industry in Germany is 2,500,000.\\n\n",
             "\n",
             "History:\n",
             "assistant: How can I help you?\n",
             "user: Give me the premium for an insured sum of 10000000\n",
             "assistant: Sure, I can help with that. However, I also need to know the industry\n",
             "of the customer to calculate the insurance premium. Could you please provide\n",
-            "that information?\n"
+            "that information?\n",
+            "user: The industry is chemical production\n",
+            "assistant: The premium for an insured sum of 10,000,000 in the chemical\n",
+            "production industry in Germany is 2,500,000.\n",
+            "user: Show me my last messages\n",
+            "assistant: HumanMessage - Give me the premium for an insured sum of 10000000\n",
+            "AIMessage - Sure, I can help with that. However, I also need to know the\n",
+            "industry of the customer to calculate the insurance premium. Could you please\n",
+            "provide that information? HumanMessage - The industry is chemical production\n",
+            "AIMessage - The premium for an insured sum of 10,000,000 in the chemical\n",
+            "production industry in Germany is 2,500,000.\n",
+            "user: Show me my last messages\n",
+            "assistant: HumanMessage - Give me the premium for an insured sum of 10000000\n",
+            "AIMessage - Sure, I can help with that. However, I also need to know the\n",
+            "industry of the customer to calculate the insurance premium. Could you please\n",
+            "provide that information? HumanMessage - The industry is chemical production\n",
+            "AIMessage - The premium for an insured sum of 10,000,000 in the chemical\n",
+            "production industry in Germany is 2,500,000. HumanMessage - Show me my last\n",
+            "messages AIMessage - HumanMessage - Give me the premium for an insured sum of\n",
+            "10000000\\nAIMessage - Sure, I can help with that. However, I also need to know\n",
+            "the industry of the customer to calculate the insurance premium. Could you\n",
+            "please provide that information?\\nHumanMessage - The industry is chemical\n",
+            "production\\nAIMessage - The premium for an insured sum of 10,000,000 in the\n",
+            "chemical production industry in Germany is 2,500,000.\\n\n"
           ]
         }
       ]
@@ -353,27 +396,27 @@
         "show_history()"
       ],
       "metadata": {
-        "id": "Yvmgw3wYgAvo",
-        "outputId": "529bc663-052c-4404-b8b6-3a569d27a7c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
-        }
+          "height": 69
+        },
+        "id": "Yvmgw3wYgAvo",
+        "outputId": "b73b578e-67b7-4ec5-d05c-f6a82353ae63"
       },
-      "execution_count": 16,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"{'role': 'HumanMessage', 'content': 'Give me the premium for an insured sum of 10000000'}\\n{'role': 'AIMessage', 'content': 'Sure, I can help with that. However, I also need to know the industry of the customer to calculate the insurance premium. Could you please provide that information?'}\""
+              "'HumanMessage - Give me the premium for an insured sum of 10000000\\nAIMessage - Sure, I can help with that. However, I also need to know the industry of the customer to calculate the insurance premium. Could you please provide that information?\\nHumanMessage - The industry is chemical production\\nAIMessage - The premium for an insurance with an insured sum of 10,000,000 in the chemical production industry in Germany is 2,500,000.\\n'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 27
         }
       ]
     },
@@ -393,10 +436,10 @@
       ],
       "metadata": {
         "id": "ZmCuWwuijWDD",
-        "outputId": "27a971bd-8ef8-4047-c4ed-a69d911f7dc5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "27a971bd-8ef8-4047-c4ed-a69d911f7dc5"
       },
       "execution_count": 11,
       "outputs": [
