--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9CnVBCMDzVlSFwiNcmmPD",
+      "authorship_tag": "ABX9TyNtdQPKR9MIaJcwybaEbMq2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,7 +80,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install langchain langchainhub langchain_experimental google-search-results wikipedia openai gradio -q\n",
+        "!pip install langchain==0.0.311 langchain-experimental==0.0.27 langchainhub==0.1.13 google-search-results==2.4.2 wikipedia==1.4.0 openai==0.28.1 gradio==3.47.1 -q\n",
         "%load_ext gradio"
       ]
     },
@@ -758,7 +758,7 @@
         "id": "9Gn4scosGVNK",
         "outputId": "bcea8102-849b-4501-a98b-483d126c14e1"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -831,7 +831,7 @@
       "metadata": {
         "id": "AFRanByCQJAW"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1295,7 +1295,7 @@
         "id": "RWpwUkQhWVeI",
         "outputId": "5029d3d2-ca9c-4ed8-b879-de00dd9efa04"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1904,7 +1904,7 @@
       "metadata": {
         "id": "TBKX06DjSfzj"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1986,7 +1986,7 @@
         "id": "w-9hFRSfSXLe",
         "outputId": "b305827c-0393-4091-c5ad-e2dd1fa7ce95"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
