--- a/Langchain-Agent-Insurance.ipynb
+++ b/Langchain-Agent-Insurance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN31bR+u9MzGm9dWWkjKHVS",
+      "authorship_tag": "ABX9TyMcxufce3Esk07wvTdrFX0J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -155,6 +155,10 @@
         "\n",
         "tools = [calc_tool, show_history_tool]\n",
         "tools_as_openai_functions = [format_tool_to_openai_function(t) for t in tools]\n",
+        "tools_dict = {\n",
+        "    \"calculate_insurance_premium\": calc_tool,\n",
+        "    \"show_history\": show_history_tool\n",
+        "    }\n",
         "\n",
         "llm_with_tools = llm.bind(\n",
         "    functions=tools_as_openai_functions\n",
@@ -176,7 +180,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 33,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -276,11 +280,114 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# CLI for agent_executor (Chatbot with memory)"
+        "# Chat loop"
       ],
       "metadata": {
         "id": "-fL3b1FXIx9I"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "langchain.debug = False\n",
+        "\n",
+        "intermediate_steps = []\n",
+        "chat_history = []\n",
+        "\n",
+        "# manual loop / like AgentExecutor\n",
+        "def chat_manual_loop(prompt_text: str) -> str:\n",
+        "  while True:\n",
+        "      output = agent.invoke({\n",
+        "          \"input\": prompt_text,\n",
+        "          \"intermediate_steps\": intermediate_steps,\n",
+        "          \"chat_history\": chat_history\n",
+        "      })\n",
+        "      if isinstance(output, AgentFinish):\n",
+        "          final_result = output.return_values[\"output\"]\n",
+        "          chat_history.append(HumanMessage(content=(prompt_text)))\n",
+        "          chat_history.append(AIMessage(content=(output.return_values[\"output\"])))\n",
+        "          break\n",
+        "      else:\n",
+        "          print(output.tool, output.tool_input)\n",
+        "          tool = tools_dict[output.tool]\n",
+        "          observation = tool.run(output.tool_input)\n",
+        "          intermediate_steps.append((output, observation))\n",
+        "  return final_result\n",
+        "\n",
+        "chat_response = chat_manual_loop(\"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\")\n",
+        "print(chat_response)"
+      ],
+      "metadata": {
+        "id": "XXmSApHfCAZw",
+        "outputId": "200bcd11-e047-468d-f95a-be6d25b9879f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chat_response = chat_manual_loop(\"Die Branche ist Metallbau.\")\n",
+        "print(chat_response)"
+      ],
+      "metadata": {
+        "id": "vyPfeoPPCjoU",
+        "outputId": "f571cf86-815f-42b4-e7a4-0d2a74049a80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 € in der Branche Metallbau beträgt in Deutschland 2.500.000 €.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chat_response = chat_manual_loop(\"Zeige mir meine letzten Nachrichten.\")\n",
+        "print(chat_response)"
+      ],
+      "metadata": {
+        "id": "S8MLl2hZCtuP",
+        "outputId": "1d049483-260b-4636-b49e-5e19d4ba0ee9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "show_history {}\n",
+            "Hier sind Ihre letzten Nachrichten:\n",
+            "\n",
+            "1. Sie: \"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\"\n",
+            "2. Ich: \"Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind?\"\n",
+            "3. Sie: \"Die Branche ist Metallbau.\"\n",
+            "4. Ich: \"Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 € in der Branche Metallbau beträgt in Deutschland 2.500.000 €.\"\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -293,7 +400,7 @@
       "metadata": {
         "id": "qVfrjxhuUbn9"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +427,7 @@
         },
         "outputId": "622374d9-1120-4897-e04c-1f80742b32c8"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +510,7 @@
         "id": "Yvmgw3wYgAvo",
         "outputId": "b73b578e-67b7-4ec5-d05c-f6a82353ae63"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +548,7 @@
         },
         "outputId": "27a971bd-8ef8-4047-c4ed-a69d911f7dc5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
