--- a/Langchain-Agent-Insurance.ipynb
+++ b/Langchain-Agent-Insurance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcxufce3Esk07wvTdrFX0J",
+      "authorship_tag": "ABX9TyNQauzIuXKamwnBRqs26qm0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,10 +143,10 @@
         "\n",
         "def show_history() -> str:\n",
         "    \"\"\"Show the history of the chat or conversation to the user.\"\"\"\n",
-        "    chat_history_string = str(response[\"chat_history\"]).replace(\"), \", \")§§§ \")[1:-1]\n",
-        "    chat_history = chat_history_string.split(\"§§§ \")\n",
+        "    chat_history_string = str(chat_history).replace(\"), \", \")§§§ \")[1:-1]\n",
+        "    chat_history_array = chat_history_string.split(\"§§§ \")\n",
         "    msg_history_string = \"\"\n",
-        "    for chat_string in chat_history:\n",
+        "    for chat_string in chat_history_array:\n",
         "      tmp = chat_string.split(\"(content='\")\n",
         "      msg_history_string = msg_history_string + tmp[0] + \" - \" + tmp[1][:-2] + \"\\n\"\n",
         "    return msg_history_string\n",
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 41,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -296,6 +296,7 @@
         "\n",
         "# manual loop / like AgentExecutor\n",
         "def chat_manual_loop(prompt_text: str) -> str:\n",
+        "  block_memory = False\n",
         "  while True:\n",
         "      output = agent.invoke({\n",
         "          \"input\": prompt_text,\n",
@@ -303,34 +304,41 @@
         "          \"chat_history\": chat_history\n",
         "      })\n",
         "      if isinstance(output, AgentFinish):\n",
-        "          final_result = output.return_values[\"output\"]\n",
-        "          chat_history.append(HumanMessage(content=(prompt_text)))\n",
-        "          chat_history.append(AIMessage(content=(output.return_values[\"output\"])))\n",
+        "          result = output.return_values[\"output\"]\n",
+        "          if block_memory == False:\n",
+        "            chat_history.append(HumanMessage(content=(prompt_text)))\n",
+        "            chat_history.append(AIMessage(content=(output.return_values[\"output\"])))\n",
         "          break\n",
         "      else:\n",
         "          print(output.tool, output.tool_input)\n",
+        "          if output.tool==\"show_history\":\n",
+        "            block_memory = True\n",
+        "            print(\"*** memory blocked\")\n",
+        "          else:\n",
+        "            block_memory = False\n",
         "          tool = tools_dict[output.tool]\n",
         "          observation = tool.run(output.tool_input)\n",
         "          intermediate_steps.append((output, observation))\n",
-        "  return final_result\n",
+        "  block_memory == False\n",
+        "  return result\n",
         "\n",
         "chat_response = chat_manual_loop(\"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\")\n",
         "print(chat_response)"
       ],
       "metadata": {
-        "id": "XXmSApHfCAZw",
-        "outputId": "200bcd11-e047-468d-f95a-be6d25b9879f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XXmSApHfCAZw",
+        "outputId": "d646ae40-e42e-43d2-92d7-baafa27db80d"
       },
-      "execution_count": 42,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind?\n"
+            "Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land Sie sich befinden? Diese Informationen sind für die Berechnung der Versicherungsprämie relevant.\n"
           ]
         }
       ]
@@ -342,157 +350,108 @@
         "print(chat_response)"
       ],
       "metadata": {
-        "id": "vyPfeoPPCjoU",
-        "outputId": "f571cf86-815f-42b4-e7a4-0d2a74049a80",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 € in der Branche Metallbau beträgt in Deutschland 2.500.000 €.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "chat_response = chat_manual_loop(\"Zeige mir meine letzten Nachrichten.\")\n",
-        "print(chat_response)"
-      ],
-      "metadata": {
-        "id": "S8MLl2hZCtuP",
-        "outputId": "1d049483-260b-4636-b49e-5e19d4ba0ee9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "show_history {}\n",
-            "Hier sind Ihre letzten Nachrichten:\n",
-            "\n",
-            "1. Sie: \"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\"\n",
-            "2. Ich: \"Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind?\"\n",
-            "3. Sie: \"Die Branche ist Metallbau.\"\n",
-            "4. Ich: \"Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 € in der Branche Metallbau beträgt in Deutschland 2.500.000 €.\"\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "memory = ConversationBufferMemory(memory_key=\"chat_history\", return_messages=True)\n",
-        "agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True, memory=memory)\n",
-        "messages = [{\"role\": \"assistant\", \"content\": \"How can I help you?\"}]\n",
-        "langchain.debug = False"
-      ],
-      "metadata": {
-        "id": "qVfrjxhuUbn9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#prompt = \"Give me the premium for an insured sum of 10000000\"\n",
-        "#prompt = \"The industry is chemical production\"\n",
-        "prompt = \"Show me my last messages\"\n",
-        "messages.append({\"role\": \"user\", \"content\": prompt})\n",
-        "print(\"user: \" + prompt)\n",
-        "response = agent_executor.invoke({\"input\": prompt})\n",
-        "msg = {\"role\": \"assistant\", \"content\": response[\"output\"]}\n",
-        "messages.append(msg)\n",
-        "print(textwrap.fill(\"assistant: \" + response[\"output\"], 80))\n",
-        "print(\"\\nHistory:\")\n",
-        "for msg in messages:\n",
-        "    #st.chat_message(msg[\"role\"]).write(msg[\"content\"])\n",
-        "    print(textwrap.fill(msg[\"role\"] + \": \" + msg[\"content\"], 80))"
-      ],
-      "metadata": {
-        "id": "OjDvg8GSaSP8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "622374d9-1120-4897-e04c-1f80742b32c8"
+        "id": "vyPfeoPPCjoU",
+        "outputId": "ca4c424f-e054-49ef-e738-504e525c6792"
       },
-      "execution_count": null,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "user: Show me my last messages\n",
-            "\n",
-            "\n",
-            "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-            "\u001b[32;1m\u001b[1;3m\n",
-            "Invoking: `show_history` with `{}`\n",
-            "\n",
-            "\n",
-            "\u001b[0m\u001b[33;1m\u001b[1;3mHumanMessage - Give me the premium for an insured sum of 10000000\n",
-            "AIMessage - Sure, I can help with that. However, I also need to know the industry of the customer to calculate the insurance premium. Could you please provide that information?\n",
-            "HumanMessage - The industry is chemical production\n",
-            "AIMessage - The premium for an insured sum of 10,000,000 in the chemical production industry in Germany is 2,500,000.\n",
-            "HumanMessage - Show me my last messages\n",
-            "AIMessage - HumanMessage - Give me the premium for an insured sum of 10000000\\nAIMessage - Sure, I can help with that. However, I also need to know the industry of the customer to calculate the insurance premium. Could you please provide that information?\\nHumanMessage - The industry is chemical production\\nAIMessage - The premium for an insured sum of 10,000,000 in the chemical production industry in Germany is 2,500,000.\\n\n",
-            "\u001b[0m\n",
-            "\u001b[32;1m\u001b[1;3m\u001b[0m\n",
-            "\n",
-            "\u001b[1m> Finished chain.\u001b[0m\n",
-            "assistant: HumanMessage - Give me the premium for an insured sum of 10000000\n",
-            "AIMessage - Sure, I can help with that. However, I also need to know the\n",
-            "industry of the customer to calculate the insurance premium. Could you please\n",
-            "provide that information? HumanMessage - The industry is chemical production\n",
-            "AIMessage - The premium for an insured sum of 10,000,000 in the chemical\n",
-            "production industry in Germany is 2,500,000. HumanMessage - Show me my last\n",
-            "messages AIMessage - HumanMessage - Give me the premium for an insured sum of\n",
-            "10000000\\nAIMessage - Sure, I can help with that. However, I also need to know\n",
-            "the industry of the customer to calculate the insurance premium. Could you\n",
-            "please provide that information?\\nHumanMessage - The industry is chemical\n",
-            "production\\nAIMessage - The premium for an insured sum of 10,000,000 in the\n",
-            "chemical production industry in Germany is 2,500,000.\\n\n",
-            "\n",
-            "History:\n",
-            "assistant: How can I help you?\n",
-            "user: Give me the premium for an insured sum of 10000000\n",
-            "assistant: Sure, I can help with that. However, I also need to know the industry\n",
-            "of the customer to calculate the insurance premium. Could you please provide\n",
-            "that information?\n",
-            "user: The industry is chemical production\n",
-            "assistant: The premium for an insured sum of 10,000,000 in the chemical\n",
-            "production industry in Germany is 2,500,000.\n",
-            "user: Show me my last messages\n",
-            "assistant: HumanMessage - Give me the premium for an insured sum of 10000000\n",
-            "AIMessage - Sure, I can help with that. However, I also need to know the\n",
-            "industry of the customer to calculate the insurance premium. Could you please\n",
-            "provide that information? HumanMessage - The industry is chemical production\n",
-            "AIMessage - The premium for an insured sum of 10,000,000 in the chemical\n",
-            "production industry in Germany is 2,500,000.\n",
-            "user: Show me my last messages\n",
-            "assistant: HumanMessage - Give me the premium for an insured sum of 10000000\n",
-            "AIMessage - Sure, I can help with that. However, I also need to know the\n",
-            "industry of the customer to calculate the insurance premium. Could you please\n",
-            "provide that information? HumanMessage - The industry is chemical production\n",
-            "AIMessage - The premium for an insured sum of 10,000,000 in the chemical\n",
-            "production industry in Germany is 2,500,000. HumanMessage - Show me my last\n",
-            "messages AIMessage - HumanMessage - Give me the premium for an insured sum of\n",
-            "10000000\\nAIMessage - Sure, I can help with that. However, I also need to know\n",
-            "the industry of the customer to calculate the insurance premium. Could you\n",
-            "please provide that information?\\nHumanMessage - The industry is chemical\n",
-            "production\\nAIMessage - The premium for an insured sum of 10,000,000 in the\n",
-            "chemical production industry in Germany is 2,500,000.\\n\n"
+            "calculate_insurance_premium {'insured_sum': 10000000, 'industry': 'Metallbau'}\n",
+            "Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chat_response = chat_manual_loop(\"show me the history of my messages\")\n",
+        "print(chat_response)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S8MLl2hZCtuP",
+        "outputId": "ea1e4f2e-ceb3-43fe-dea5-926233ad4187"
+      },
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chat_history_string = str(chat_history).replace(\"), \", \")§§§ \")[1:-1]\n",
+        "print(chat_history_string)\n",
+        "chat_history_array = chat_history_string.split(\"§§§ \")\n",
+        "msg_history_string = \"\"\n",
+        "for chat_string in chat_history_array:\n",
+        "  tmp = chat_string.split(\"(content='\")\n",
+        "  msg_history_string = msg_history_string + tmp[0] + \" - \" + tmp[1][:-2] + \"\\n\"\n",
+        "print(msg_history_string)"
+      ],
+      "metadata": {
+        "id": "fm_XIMGjJKpe",
+        "outputId": "1d527b3b-4cec-40d2-d24f-c509d596f2f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HumanMessage(content='Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000')§§§ AIMessage(content='Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land Sie sich befinden? Diese Informationen sind für die Berechnung der Versicherungsprämie relevant.')§§§ HumanMessage(content='Die Branche ist Metallbau.')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.')§§§ HumanMessage(content='Berechne für eine Versicherungssumme von 20000000, Branche Chemie')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 20.000.000 in der Branche Chemie in Deutschland beträgt 5.000.000 Euro.')§§§ HumanMessage(content='Berechne für eine Versicherungssumme von 1000000, Branche Software')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.')\n",
+            "HumanMessage - Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\n",
+            "AIMessage - Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land Sie sich befinden? Diese Informationen sind für die Berechnung der Versicherungsprämie relevant.\n",
+            "HumanMessage - Die Branche ist Metallbau.\n",
+            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.\n",
+            "HumanMessage - Berechne für eine Versicherungssumme von 20000000, Branche Chemie\n",
+            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 20.000.000 in der Branche Chemie in Deutschland beträgt 5.000.000 Euro.\n",
+            "HumanMessage - Berechne für eine Versicherungssumme von 1000000, Branche Software\n",
+            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chat_response = chat_manual_loop(\"Berechne für eine Versicherungssumme von 1000000, Branche Software\")\n",
+        "print(chat_response)"
+      ],
+      "metadata": {
+        "id": "_KbFOg0YG4Sd",
+        "outputId": "274ad172-7942-4c22-d4a0-9c784dbea2dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "calculate_insurance_premium {'insured_sum': 1000000, 'industry': 'Software'}\n",
+            "Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n"
           ]
         }
       ]
@@ -505,25 +464,25 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 154
         },
         "id": "Yvmgw3wYgAvo",
-        "outputId": "b73b578e-67b7-4ec5-d05c-f6a82353ae63"
+        "outputId": "758c1b60-b78f-4f9f-db8f-0ce7d91239bc"
       },
-      "execution_count": null,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'HumanMessage - Give me the premium for an insured sum of 10000000\\nAIMessage - Sure, I can help with that. However, I also need to know the industry of the customer to calculate the insurance premium. Could you please provide that information?\\nHumanMessage - The industry is chemical production\\nAIMessage - The premium for an insurance with an insured sum of 10,000,000 in the chemical production industry in Germany is 2,500,000.\\n'"
+              "'HumanMessage - Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\\nAIMessage - Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land Sie sich befinden? Diese Informationen sind für die Berechnung der Versicherungsprämie relevant.\\nHumanMessage - Die Branche ist Metallbau.\\nAIMessage - Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.\\nHumanMessage - Berechne für eine Versicherungssumme von 20000000, Branche Chemie\\nAIMessage - Die Versicherungsprämie für eine Versicherungssumme von 20.000.000 in der Branche Chemie in Deutschland beträgt 5.000.000 Euro.\\nHumanMessage - Berechne für eine Versicherungssumme von 1000000, Branche Software\\nAIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\\n'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 117
         }
       ]
     },
