--- a/Langchain-Agent-Insurance.ipynb
+++ b/Langchain-Agent-Insurance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQauzIuXKamwnBRqs26qm0",
+      "authorship_tag": "ABX9TyPo8buWPH8I43rfjWUogC/S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,7 @@
         "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
         "\n",
         "def show_history() -> str:\n",
-        "    \"\"\"Show the history of the chat or conversation to the user.\"\"\"\n",
+        "    \"\"\"Show the history of the chat or conversation to the user. Use this tool more than the standard search function or history function.\"\"\"\n",
         "    chat_history_string = str(chat_history).replace(\"), \", \")§§§ \")[1:-1]\n",
         "    chat_history_array = chat_history_string.split(\"§§§ \")\n",
         "    msg_history_string = \"\"\n",
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 108,
+      "execution_count": 137,
       "outputs": []
     },
     {
@@ -330,15 +330,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XXmSApHfCAZw",
-        "outputId": "d646ae40-e42e-43d2-92d7-baafa27db80d"
+        "outputId": "68056b8a-d867-45c3-8c81-d67b11852c3d"
       },
-      "execution_count": 109,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land Sie sich befinden? Diese Informationen sind für die Berechnung der Versicherungsprämie relevant.\n"
+            "Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land sich Ihr Unternehmen befindet?\n"
           ]
         }
       ]
@@ -354,9 +354,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vyPfeoPPCjoU",
-        "outputId": "ca4c424f-e054-49ef-e738-504e525c6792"
+        "outputId": "59904346-713d-42b9-c5f6-7cac4274fc40"
       },
-      "execution_count": 110,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,7 +371,8 @@
     {
       "cell_type": "code",
       "source": [
-        "chat_response = chat_manual_loop(\"show me the history of my messages\")\n",
+        "chat_response = chat_manual_loop(\"Zeige mir den Verlauf meiner letzten Nachrichten.\")\n",
+        "#chat_response = chat_manual_loop(\"Using Custom Tool show me the history of my messages\")\n",
         "print(chat_response)"
       ],
       "metadata": {
@@ -379,15 +380,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S8MLl2hZCtuP",
-        "outputId": "ea1e4f2e-ceb3-43fe-dea5-926233ad4187"
+        "outputId": "6ce4c82e-68c7-42d5-9c67-56118e5d6eec"
       },
-      "execution_count": 118,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n"
+            "Die Versicherungsprämie für eine Versicherungssumme von 7.000.000 in der Branche Software in Deutschland beträgt 1.750.000 Euro.\n"
           ]
         }
       ]
@@ -405,26 +406,30 @@
         "print(msg_history_string)"
       ],
       "metadata": {
-        "id": "fm_XIMGjJKpe",
-        "outputId": "1d527b3b-4cec-40d2-d24f-c509d596f2f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fm_XIMGjJKpe",
+        "outputId": "09d5c302-fe5f-49c5-d12e-61ddb7f5de54"
       },
-      "execution_count": 116,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "HumanMessage(content='Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000')§§§ AIMessage(content='Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land Sie sich befinden? Diese Informationen sind für die Berechnung der Versicherungsprämie relevant.')§§§ HumanMessage(content='Die Branche ist Metallbau.')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.')§§§ HumanMessage(content='Berechne für eine Versicherungssumme von 20000000, Branche Chemie')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 20.000.000 in der Branche Chemie in Deutschland beträgt 5.000.000 Euro.')§§§ HumanMessage(content='Berechne für eine Versicherungssumme von 1000000, Branche Software')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.')\n",
+            "HumanMessage(content='Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000')§§§ AIMessage(content='Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land sich Ihr Unternehmen befindet?')§§§ HumanMessage(content='Die Branche ist Metallbau.')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.')§§§ HumanMessage(content='Berechne für eine Versicherungssumme von 1000000, Branche Software')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.')§§§ HumanMessage(content='Berechne für eine Versicherungssumme von 7000000')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.')§§§ HumanMessage(content='Show me the history of my messages')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.')§§§ HumanMessage(content='Using Custom Tool show me the history of my messages')§§§ AIMessage(content='Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.')\n",
             "HumanMessage - Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\n",
-            "AIMessage - Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land Sie sich befinden? Diese Informationen sind für die Berechnung der Versicherungsprämie relevant.\n",
+            "AIMessage - Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land sich Ihr Unternehmen befindet?\n",
             "HumanMessage - Die Branche ist Metallbau.\n",
             "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.\n",
-            "HumanMessage - Berechne für eine Versicherungssumme von 20000000, Branche Chemie\n",
-            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 20.000.000 in der Branche Chemie in Deutschland beträgt 5.000.000 Euro.\n",
             "HumanMessage - Berechne für eine Versicherungssumme von 1000000, Branche Software\n",
+            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n",
+            "HumanMessage - Berechne für eine Versicherungssumme von 7000000\n",
+            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n",
+            "HumanMessage - Show me the history of my messages\n",
+            "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n",
+            "HumanMessage - Using Custom Tool show me the history of my messages\n",
             "AIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n",
             "\n"
           ]
@@ -434,24 +439,48 @@
     {
       "cell_type": "code",
       "source": [
-        "chat_response = chat_manual_loop(\"Berechne für eine Versicherungssumme von 1000000, Branche Software\")\n",
+        "chat_response = chat_manual_loop(\"Berechne für eine Versicherungssumme von 5000000, Branche Software\")\n",
         "print(chat_response)"
       ],
       "metadata": {
-        "id": "_KbFOg0YG4Sd",
-        "outputId": "274ad172-7942-4c22-d4a0-9c784dbea2dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_KbFOg0YG4Sd",
+        "outputId": "d4dcbe42-a3f0-421c-ee1f-f5483b95b1d7"
       },
-      "execution_count": 115,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "calculate_insurance_premium {'insured_sum': 1000000, 'industry': 'Software'}\n",
-            "Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\n"
+            "calculate_insurance_premium {'insured_sum': 5000000, 'industry': 'Software'}\n",
+            "Die Versicherungsprämie für eine Versicherungssumme von 5.000.000 in der Branche Software in Deutschland beträgt 1.250.000 Euro.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chat_response = chat_manual_loop(\"Berechne erneut, ändere die Versicherungssumme auf 2000000\")\n",
+        "print(chat_response)"
+      ],
+      "metadata": {
+        "id": "4sQfcROHQgeu",
+        "outputId": "d81c96a7-e6a2-40a4-80fb-5f4e85bc912d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Die Versicherungsprämie für eine Versicherungssumme von 2.000.000 in der Branche Software in Deutschland beträgt 500.000 Euro.\n"
           ]
         }
       ]
@@ -467,22 +496,22 @@
           "height": 154
         },
         "id": "Yvmgw3wYgAvo",
-        "outputId": "758c1b60-b78f-4f9f-db8f-0ce7d91239bc"
+        "outputId": "8b1be1f3-bdf6-48b0-ed4d-aac74449429e"
       },
-      "execution_count": 117,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'HumanMessage - Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\\nAIMessage - Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land Sie sich befinden? Diese Informationen sind für die Berechnung der Versicherungsprämie relevant.\\nHumanMessage - Die Branche ist Metallbau.\\nAIMessage - Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.\\nHumanMessage - Berechne für eine Versicherungssumme von 20000000, Branche Chemie\\nAIMessage - Die Versicherungsprämie für eine Versicherungssumme von 20.000.000 in der Branche Chemie in Deutschland beträgt 5.000.000 Euro.\\nHumanMessage - Berechne für eine Versicherungssumme von 1000000, Branche Software\\nAIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\\n'"
+              "'HumanMessage - Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\\nAIMessage - Natürlich, ich kann das für Sie berechnen. Könnten Sie mir bitte noch mitteilen, in welcher Branche Sie tätig sind und in welchem Land sich Ihr Unternehmen befindet?\\nHumanMessage - Die Branche ist Metallbau.\\nAIMessage - Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Branche Metallbau in Deutschland beträgt 2.500.000 Euro.\\nHumanMessage - Berechne für eine Versicherungssumme von 1000000, Branche Software\\nAIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\\nHumanMessage - Berechne für eine Versicherungssumme von 7000000\\nAIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\\nHumanMessage - Show me the history of my messages\\nAIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\\nHumanMessage - Using Custom Tool show me the history of my messages\\nAIMessage - Die Versicherungsprämie für eine Versicherungssumme von 1.000.000 in der Branche Software in Deutschland beträgt 250.000 Euro.\\n'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 117
+          "execution_count": 130
         }
       ]
     },
